# MyFantasyEngine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build
assets/models/lantern/: lantern.glb
assets/scenes/dungeon/: dungeon.camera
logo/: LICENSE
source/: filament.cpp  filament.h  main.cpp  resourceManager.cpp  resourceManager.h  window.cpp  window.h
source/input/: BackgroundLoader.cpp  BackgroundLoader.h
source/manager/: AssetManager.cpp  AssetManager.h
source/renderer/: Renderer.cpp  Renderer.h
source/window/: Window.cpp  Window.h
subprojects/filament-windows/: meson.build
tools/: compile_assets.py  exr_to_depth.py
web/: index.html
